panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_initialisation_of_union.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_initialisation_of_union.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_initialisation_of_union.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (declaration memcmp~1 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: typeof((sizeof 0))) -> int` ∅)
   (union IntInt~2
      (member i `int`)
      (member u `unsigned int`))
   (struct T~3
      (member x `unsigned int`)
      (member y `unsigned int`))
   (union StructInt~4
      (member t `struct T~3 complete`)
      (member x `int`))
   (struct ContainsUnion~5
      (member x `int`)
      (member struct_int `union StructInt~4 complete`)
      (member y `int`))
   (function-definition
      main~6 `fn() -> int`
      (compound-statement
         (declaration int_int~8 `union IntInt~2 complete`
            (braced
               (negate 1)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot i
                        (name int_int~8 `union IntInt~2 complete`)))
                  (negate 1LL))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot u
                        (name int_int~8 `union IntInt~2 complete`)))
                  0xffff'ffffLL)))
         (declaration struct_int~9 `union StructInt~4 complete`
            (braced
               0xffff'ffff
               42))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot x
                        (dot t
                           (name struct_int~9 `union StructInt~4 complete`))))
                  0xffff'ffffLL)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot y
                        (dot t
                           (name struct_int~9 `union StructInt~4 complete`))))
                  42LL)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot x
                        (name struct_int~9 `union StructInt~4 complete`)))
                  (negate 1LL))))
         (declaration contains_union~10 `struct ContainsUnion~5 complete`
            (braced
               2
               0xffff'ffff
               0xffff'fffe
               3))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (dot x
                  (name contains_union~10 `struct ContainsUnion~5 complete`))
               (dot y
                  (name contains_union~10 `struct ContainsUnion~5 complete`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot x
                        (dot t
                           (dot struct_int
                              (name contains_union~10 `struct ContainsUnion~5 complete`)))))
                  0xffff'ffffLL)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot y
                        (dot t
                           (dot struct_int
                              (name contains_union~10 `struct ContainsUnion~5 complete`)))))
                  0xffff'fffeLL)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal
                  (cast `long`
                     (dot x
                        (dot struct_int
                           (name contains_union~10 `struct ContainsUnion~5 complete`))))
                  (negate 1LL))))
         (declaration contains_union_2~11 `struct ContainsUnion~5 complete`
            (braced
               2
               (braced
                  (braced
                     0xffff'ffff
                     0xffff'fffe))
               3))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (call (name memcmp~1 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: typeof((sizeof 0))) -> int`)
                  (addressof (name contains_union~10 `struct ContainsUnion~5 complete`))
                  (addressof (name contains_union_2~11 `struct ContainsUnion~5 complete`))
                  (sizeof (name contains_union~10 `struct ContainsUnion~5 complete`))))))))

----- stderr -----
