panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_member_access_in_ternary.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_member_access_in_ternary.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_member_access_in_ternary.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member x `int`))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration value~4 `struct Struct~1 complete`
            (braced
               42))
         (declaration other~5 `struct Struct~1 complete`
            (braced
               27))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (dot x
                  (conditional
                     true
                     (name value~4 `struct Struct~1 complete`)
                     (name other~5 `struct Struct~1 complete`)))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (dot x
                  (conditional
                     false
                     (name value~4 `struct Struct~1 complete`)
                     (name other~5 `struct Struct~1 complete`))))))))

----- stderr -----
