panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_offsetof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_offsetof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_offsetof.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct T~1
      (member x `int`)
      (member ∅ `struct ∅~2 complete`)
      (member nested_struct `struct ∅~3 complete`))
   (typedef TypeName `struct T~1 complete`)
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (declaration t~6 `struct T~1 complete` ∅)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %zu %zu %zu\n")
               (offsetof `struct T~1 complete` x)
               (offsetof `typeof((name t~6 `struct T~1 complete`))` y)
               (offsetof `struct T~1 complete` l)
               (offsetof `struct T~1 complete` nested_struct))))))

----- stderr -----
