panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_pointer_to_incomplete_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_pointer_to_incomplete_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_pointer_to_incomplete_struct.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef size_t `typeof((sizeof 0))`)
   (function-definition
      f~2 `fn(p: ptr<struct T~1>) -> typeof((sizeof 0))`
      (params
         p~4 `ptr<struct T~1>`)
      (compound-statement
         (return (sizeof (name p~4 `ptr<struct T~1>`)))))
   (function-definition
      main~5 `fn() -> int`
      (compound-statement
         (declaration p~7 `ptr<struct T~1>` (cast `ptr<struct T~1>` nullptr))
         (declaration q~8 `ptr<struct T~1>` nullptr)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal (name p~7 `ptr<struct T~1>`) (name q~8 `ptr<struct T~1>`))))
         (return
            (cast `int`
               (call (name f~2 `fn(p: ptr<struct T~1>) -> typeof((sizeof 0))`)
                  (name p~7 `ptr<struct T~1>`)))))))

----- stderr -----
