panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_redeclaration_in_different_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_redeclaration_in_different_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_redeclaration_in_different_scope.c"
   (struct T~0
      (member x `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (struct T~3
            (member l `long`))
         (return (sizeof `struct T~3 complete`)))))

----- stderr -----
