panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_sizeof_union.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_sizeof_union.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_sizeof_union.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (union U~1
      (member x `array<int; 2>`)
      (member c `char`))
   (union U2~2
      (member c `char`)
      (member x `array<int; 3>`))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %zu\n")
               (sizeof `union U~1 complete`)
               (sizeof `union U2~2 complete`))))))

----- stderr -----
