panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_struct_completed_in_inner_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (compound-statement
            (struct T~3
               (member x `int`)))
         (declaration incomplete_here~4 `struct T~2`
            (braced
               (designation ((member x)) 42))))))

----- stderr -----
