panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_struct_completed_in_parameter_list_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration f~4 `fn(p: ptr<struct X~3 complete>) -> ptr<struct X~2>` ∅)
         (expression
            (sizeof
               (deref
                  (call (name f~4 `fn(p: ptr<struct X~3 complete>) -> ptr<struct X~2>`)
                     nullptr))))
         (declaration incomplete_here~5 `struct X~2` (braced ∅)))))

----- stderr -----
