panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_struct_with_const_member.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_struct_with_const_member.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_struct_with_const_member.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member x `int`)
      (member y `int const`)
      (member z `int`))
   (function-definition
      make_struct~2 `fn() -> struct Struct~1 complete`
      (compound-statement
         (struct Struct~1
            (member x `int`)
            (member y `int const`)
            (member z `int`))
         (declaration value~4 `struct Struct~1 complete`
            (braced
               1
               2
               3))
         (return (name value~4 `struct Struct~1 complete`))))
   (function-definition
      print_struct~5 `fn(value: struct Struct~1 complete) -> void`
      (params
         value~7 `struct Struct~1 complete`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d\n")
               (dot x
                  (name value~7 `struct Struct~1 complete`))
               (dot y
                  (name value~7 `struct Struct~1 complete`))
               (dot z
                  (name value~7 `struct Struct~1 complete`))))))
   (function-definition
      main~8 `fn() -> int`
      (compound-statement
         (struct Struct~1
            (member x `int`)
            (member y `int const`)
            (member z `int`))
         (declaration value~10 `struct Struct~1 complete` (call (name make_struct~2 `fn() -> struct Struct~1 complete`)))
         (expression
            (assign
               (dot x
                  (name value~10 `struct Struct~1 complete`))
               42))
         (expression
            (assign
               (dot z
                  (name value~10 `struct Struct~1 complete`))
               27))
         (expression
            (call (name print_struct~5 `fn(value: struct Struct~1 complete) -> void`)
               (name value~10 `struct Struct~1 complete`))))))

----- stderr -----
